--- a/style.css
+++ b/style.css
@@ -42,3 +42,19 @@ h2{
                 width: 49%;
                 height: 100%;
 }
+#calculo >p{
+                margin-top: 200px;
+                text-align: center;
+                font-weight: bold;
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 1.1em; 
+}
+#notasbimestrais{
+                text-align: center;
+                margin-top: 100px;
+}
+.notas{
+                width: 70px;
+                padding: 5px;
+                border-radius: 5px;
+}
