--- a/style.css
+++ b/style.css
@@ -66,3 +66,11 @@ button{
                 padding: 5px;
                 border-radius: 5px;
 }
+
+#resultado{
+                margin-top: 40px;
+                text-align: center;
+                font-weight: bold;
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 2em; 
+}
