--- a/style.css
+++ b/style.css
@@ -18,11 +18,9 @@ h1{
                 font-weight: 300;
                 font-family: 'Staatliches', cursive;           
 }
-h2{
-                
+h2{     
                 padding-left: 20px;
                 font-family: 'Montserrat', sans-serif;
-                
 }
 .texto{
                 max-width: 760px;
@@ -45,17 +43,21 @@ h2{
                 display: flex;
                 flex-direction: row;
                 flex-wrap: wrap;
-                justify-content: center;
+                justify-content:space-evenly;
                 margin-top: 30px;
 }
+.espacos-notas{
+                display: flex;
+                flex-direction: column;
+}
 .titulo-notas{
-                margin-left: 10px;
                 font-family: 'Montserrat', sans-serif;
                 font-weight: 600;
 }
 .notas{
-                width: 70px;
+                width: 85px;
                 padding: 5px;
+                border-style: solid;
                 border-radius: 5px;
                 font-family: 'Montserrat', sans-serif;
 }
@@ -83,4 +85,46 @@ button:hover{
                 font-weight: bold;
                 font-family: 'Montserrat', sans-serif;
                 font-size: 2em; 
+}
+
+@media screen and (max-width:500px){
+                #container{
+                                width: 100%;
+                                background-color: white;
+                }
+                h1{             
+                                padding-top:15px ;
+                                text-align: center;
+                                font-size: 2em;
+                                font-weight: 300;
+                                font-family: 'Staatliches', cursive;           
+                }  
+                h2{     
+                                padding-left: 20px;
+                                font-family: 'Montserrat', sans-serif;
+                                font-size:1.1em;
+                }
+                .texto{
+                                margin: auto;
+                                margin-top: 20px;
+                                padding-left: 5px;
+                                padding-right: 5px;
+                                text-align: center;
+                                font-family: 'Montserrat', sans-serif;
+                                font-size:0.9em;
+                                line-height: 25px;
+                }
+                #imagem-formula{
+                                display: block;
+                                margin:auto;
+                                width: 100%;
+                }
+                #resultado{
+                                margin-top: 40px;
+                                padding-bottom: 30px;
+                                text-align: center;
+                                font-weight: bold;
+                                font-family: 'Montserrat', sans-serif;
+                                font-size: 1.4em; 
+                }
 }
